--- a/index.html
+++ b/index.html
@@ -6,10 +6,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>FAQ | Cartoon Network</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+    <!-- styles -->
     <link rel="stylesheet" type="text/css" media="screen" href="./styles/main-style.min.css" />
   </head>
 
   <body>
+
+    <div id="rigby">
+      <object id="rightLeg" data="./Rigby/RightLeg.svg" type="image/svg+xml"></object>
+      <object id="leftLeg" data="./Rigby/LeftLeg.svg" type="image/svg+xml"></object>
+      <object id="tail" data="./Rigby/Tail.svg" type="image/svg+xml"></object>
+      <object id="leftArm" data="./Rigby/LeftArm.svg" type="image/svg+xml"></object>
+      <object id="body" data="./Rigby/Body.svg" type="image/svg+xml"></object>
+      <object id="rightArm" data="./Rigby/Arm.svg" type="image/svg+xml"></object>
+      <object id="eyebrows" data="./Rigby/Eyebrow.svg" type="image/svg+xml"></object>
+      <object id="eyes" data="./Rigby/Eyes.svg" type="image/svg+xml"></object>
+    </div>
+
+
+
+
+
+
+    <!-- gsap -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.3/TweenMax.min.js"></script>
+    <!-- controller -->
     <script src="./js/app.js"></script>
   </body>
 
