Create first stage of Rigby's animation

--- a/index.html
+++ b/index.html
@@ -17,20 +17,75 @@
     <div id="rigby">
       <object id="rightLeg" data="./Rigby/RightLeg.svg" type="image/svg+xml"></object>
       <object id="leftLeg" data="./Rigby/LeftLeg.svg" type="image/svg+xml"></object>
-      <object id="tail" data="./Rigby/Tail.svg" type="image/svg+xml"></object>
+      <svg id="tail" width="106px" height="205px" viewBox="0 0 106 205" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+        <!-- Generator: Sketch 43.1 (39012) - http://www.bohemiancoding.com/sketch -->
+        <desc>Created with Sketch.</desc>
+        <defs>
+          <path d="M1.19588651,41.6677291 C-1.19691628,24.0742 5.41292419,8.20751978 19.8964689,8.25682947 C34.3800137,8.30613916 40.9203545,30.9338274 40.9203545,30.9338274 C40.9203545,30.9338274 46.8711508,75.0596478 68.1092303,99.7870411 C89.3473098,124.514434 135.464086,139.81145 143.05142,150.727381 C146.247734,155.325932 153.819878,162.77065 148.098805,173.366372 C142.377733,183.962094 125.076336,181.745865 125.076336,181.745865 C125.076336,181.745865 67.5766955,169.473645 36.721072,131.962863 C5.86544847,94.4520811 3.58868931,59.2612582 1.19588651,41.6677291 Z"
+            id="path-1"></path>
+        </defs>
+        <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+          <g id="tail" transform="translate(58.069286, 103.938984) rotate(20.000000) translate(-58.069286, -103.938984) translate(-17.430714, 7.438984)">
+            <g id="Group" transform="translate(-0.000000, -0.000000)">
+              <mask id="mask-2" fill="white">
+                <use xlink:href="#path-1"></use>
+              </mask>
+              <use id="Rectangle-9" fill="#ED1A7F" xlink:href="#path-1"></use>
+              <g id="Group-2" mask="url(#mask-2)" fill="#000000">
+                <g transform="translate(-16.000000, 25.000000)">
+                  <polygon id="Rectangle-1" transform="translate(135.904887, 134.088756) rotate(30.000000) translate(-135.904887, -134.088756) "
+                    points="127.30464 99.3146412 139.218084 97.5625421 149.347656 168.721812 122.462117 170.614969"></polygon>
+                  <polygon id="Rectangle-2" transform="translate(89.183916, 115.499337) rotate(30.000000) translate(-89.183916, -115.499337) "
+                    points="87.0226508 85.4162065 109.625592 84.1485132 98.7856957 146.850161 68.7422405 138.611004"></polygon>
+                  <polygon id="Rectangle-3" transform="translate(51.865340, 72.523307) rotate(51.000000) translate(-51.865340, -72.523307) "
+                    points="50.5727473 42.9671131 72.0408852 46.6575135 64.0625818 102.079501 31.6897944 97.8071905"></polygon>
+                  <polygon id="Rectangle-4" transform="translate(36.268256, 22.491689) rotate(77.000000) translate(-36.268256, -22.491689) "
+                    points="29.1426623 -10.9590021 51.3442857 -10.6624892 50.454747 55.9423809 21.1922269 51.4752879"></polygon>
+                </g>
+              </g>
+            </g>
+          </g>
+        </g>
+      </svg>
       <object id="leftArm" data="./Rigby/LeftArm.svg" type="image/svg+xml"></object>
       <object id="body" data="./Rigby/Body.svg" type="image/svg+xml"></object>
-      <object id="rightArm" data="./Rigby/Arm.svg" type="image/svg+xml"></object>
-      <object id="eyebrows" data="./Rigby/Eyebrow.svg" type="image/svg+xml"></object>
-      <object id="eyes" data="./Rigby/Eyes.svg" type="image/svg+xml"></object>
+      <div id="rightArm">
+        <svg width="200px" height="86px" viewBox="0 0 104 86" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+          <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" stroke-linecap="round">
+            <g id="Arm" transform="translate(5.000000, 4.000000)" stroke="#000000">
+              <path d="
+                      M0.5,0.5 
+                      C0.5,0.5 
+                      -2.9006472,71.8438447 
+                      16.5,76.5 
+                      C35.9006472,81.1561553 
+                      75.5,18.5 
+                      75.5,18.5
+                      " id="armStructure" stroke-width="9">
+              </path>
+
+              <!-- <g id="Arm" transform="translate(5.000000, 4.000000)" stroke="#000000" stroke-width="9">
+                  <path d="M0.5,0.5 C0.5,0.5 -2.9006472,71.8438447 16.5,76.5 C35.9006472,81.1561553 108.5,20 108.5,20" id="Line"></path>
+              </g>
+        -->
+              <path d="M76,17 C76,17 71.8240412,15.4721919 70.5,14.25 C69.1759588,13.0278081 68,11.5 68,11.5" id="Line" stroke-width="6"></path>
+              <path d="M77.5,17.5 C77.5,17.5 83.4669137,15.7702194 88,13 C92.5330863,10.2297806 95.5,6.5 95.5,6.5" id="Line" stroke-width="6"></path>
+              <path d="M78.5,20.5 L92.5,15.5" id="Line" stroke-width="6"></path>
+              <path d="M77,22.5 C77,22.5 79.5937439,23.5009491 82.4943053,23.5009491 C85.3948667,23.5009491 88.5,22.5 88.5,22.5" id="Line"
+                stroke-width="5"></path>
+            </g>
+          </g>
+        </svg>
+      </div>
+      <div id="eyeStructure">
+        <object id="eyebrows" data="./Rigby/Eyebrow.svg" type="image/svg+xml"></object>
+        <object id="eyes" data="./Rigby/Eyes.svg" type="image/svg+xml"></object>
+      </div>
+
     </div>
 
-
-
-
-
-
     <!-- gsap -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.3/TweenMax.min.js"></script>
     <!-- controller -->
     <script src="./js/app.js"></script>
