Add Rigby's blink

--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
       <div id="eyeStructure">
         <object id="eyebrows" data="./Rigby/Eyebrow.svg" type="image/svg+xml"></object>
         <object id="eyes" data="./Rigby/Eyes.svg" type="image/svg+xml"></object>
+        <object id="blink" data="./Rigby/Eyes-blink.svg" type="image/svg+xml"></object>
       </div>
-
     </div>
 
     <!-- gsap -->
