Add bears animation and background images

--- a/index.html
+++ b/index.html
@@ -13,7 +13,13 @@
   </head>
 
   <body>
+    <!-- faq container -->
+    <div id="faq-container">
+      <img id="faq-left-tile-bg" src="./assets/faq-left-tile-bg.png" alt="faq-left-tile-bg">
+      <img id="square-diagonal-lines" src="./assets/square-diagonal-lines.png" alt="square-diagonal-lines">
+    </div>
 
+    <!-- rigby -->
     <div id="rigby">
       <object id="rightLeg" data="./Rigby/RightLeg.svg" type="image/svg+xml"></object>
       <object id="leftLeg" data="./Rigby/LeftLeg.svg" type="image/svg+xml"></object>
@@ -83,7 +89,44 @@
         <object id="blink" data="./Rigby/Eyes-blink.svg" type="image/svg+xml"></object>
       </div>
     </div>
+    <!-- bears -->
+    <div id="tres-osos">
+      <svg width="1020px" height="952px" viewBox="0 0 720 952" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+        <!-- Generator: Sketch 43.1 (39012) - http://www.bohemiancoding.com/sketch -->
+        <desc>Created with Sketch.</desc>
+        <defs></defs>
+        <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+          <g id="red-bear">
+            <path d="M164,43 L720,43 L720,351 C720,351 200.5,351 134.5,340 C68.5,329 -7,246.288285 4.5,197 C16,147.711715 59.5,162.5 79.4153145,147.711715 C99.330629,132.92343 138,43 164,43 Z"
+              id="Rectangle" fill="#EE1459"></path>
+            <circle id="Oval" fill="#EE1459" cx="237" cy="23" r="23"></circle>
+            <ellipse id="Oval-2" fill="#000000" cx="18.5" cy="187.5" rx="18.5" ry="21.5"></ellipse>
+            <ellipse id="Oval-3" fill="#000000" cx="145" cy="155" rx="10" ry="9"></ellipse>
+          </g>
+          <g id="white-bear" transform="translate(0.000000, 291.000000)">
+            <path d="M164,43 L720,43 L720,351 C720,351 200.5,351 134.5,340 C68.5,329 -7,246.288285 4.5,197 C16,147.711715 59.5,162.5 79.4153145,147.711715 C99.330629,132.92343 138,43 164,43 Z"
+              id="Rectangle" fill="#FDF6F8"></path>
+            <circle id="Oval" fill="#000000" cx="237" cy="23" r="23"></circle>
+            <ellipse id="Oval-2" fill="#000000" cx="18.5" cy="187.5" rx="18.5" ry="21.5"></ellipse>
+            <ellipse id="Oval-4" fill="#000000" cx="143" cy="151.5" rx="38" ry="35.5"></ellipse>
+            <ellipse id="Oval-3" fill="#FFFFFF" cx="122.5" cy="156" rx="5.5" ry="5"></ellipse>
+          </g>
+          <g id="blue-bear" transform="translate(0.000000, 601.000000)">
+            <path d="M164,43 L720,43 L720,351 C720,351 200.5,351 134.5,340 C68.5,329 -7,246.288285 4.5,197 C16,147.711715 59.5,162.5 79.4153145,147.711715 C99.330629,132.92343 138,43 164,43 Z"
+              id="Rectangle" fill="#A3D9F4"></path>
+            <circle id="Oval" fill="#A3D9F4" cx="237" cy="23" r="23"></circle>
+            <ellipse id="Oval-2" fill="#000000" cx="18.5" cy="187.5" rx="18.5" ry="21.5"></ellipse>
+            <ellipse id="Oval-3" fill="#000000" cx="145" cy="155" rx="10" ry="9"></ellipse>
+          </g>
+        </g>
+      </svg>S
+    </div>
 
+    <!-- background shapes -->
+    <img id="square-grey-triangles" src="./assets/square-grey-triangles.png" alt="grey-triangles">
+    <img id="blue-squares" src="./assets/blue-squares.png" alt="blue-squares">
+    <img id="cartoon-network" src="./assets/cartoon-network.png" alt="cartoon-network">
+    <!-- SCRIPTS -->
     <!-- gsap -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.3/TweenMax.min.js"></script>
