--- a/index.html
+++ b/index.html
@@ -7,16 +7,25 @@
     <title>FAQ | Cartoon Network</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lato:300" rel="stylesheet">
     <!-- styles -->
     <link rel="stylesheet" type="text/css" media="screen" href="./styles/main-style.min.css" />
   </head>
 
   <body>
+    <!-- navbar -->
+    <div class="navbar-container">
+      <span>OUR STUDIO</span>
+      <span>JOBS</span>
+      <span>INTERNSHIPS</span>
+      <span>OUR WORK</span>
+      <span class="active">FAQ</span>
+    </div>
     <!-- faq container -->
     <div id="faq-container">
       <img id="faq-left-tile-bg" src="./assets/faq-left-tile-bg.png" alt="faq-left-tile-bg">
       <img id="square-diagonal-lines" src="./assets/square-diagonal-lines.png" alt="square-diagonal-lines">
+      <div id="faq"></div>
     </div>
 
     <!-- rigby -->
