Add contact us button and text

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>FAQ | Cartoon Network</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Lato:300" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,400" rel="stylesheet">
     <!-- styles -->
     <link rel="stylesheet" type="text/css" media="screen" href="./styles/main-style.min.css" />
   </head>
@@ -21,11 +21,15 @@
       <span>OUR WORK</span>
       <span class="active">FAQ</span>
     </div>
+
     <!-- faq container -->
     <div id="faq-container">
+      <img id="faq-title" src="./assets/faq.png" alt="faq">
       <img id="faq-left-tile-bg" src="./assets/faq-left-tile-bg.png" alt="faq-left-tile-bg">
       <img id="square-diagonal-lines" src="./assets/square-diagonal-lines.png" alt="square-diagonal-lines">
       <div id="faq"></div>
+      <span class="find-answer">Can’t find what you’re looking for?</span>
+      <a id="button" href="#!">CONTACT US</a>
     </div>
 
     <!-- rigby -->
@@ -135,6 +139,9 @@
     <img id="square-grey-triangles" src="./assets/square-grey-triangles.png" alt="grey-triangles">
     <img id="blue-squares" src="./assets/blue-squares.png" alt="blue-squares">
     <img id="cartoon-network" src="./assets/cartoon-network.png" alt="cartoon-network">
+
+    <!-- text -->
+    <span class="rights">©2016 turner. all rights reserved.</span>
     <!-- SCRIPTS -->
     <!-- gsap -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
