Add pink-triangles above social networks

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
     <img id="square-grey-triangles" src="./assets/square-grey-triangles.png" alt="grey-triangles">
     <img id="blue-squares" src="./assets/blue-squares.png" alt="blue-squares">
     <img id="cartoon-network" src="./assets/cartoon-network.png" alt="cartoon-network">
-
+    <img id="pink-triangles" src="./assets/pink-triangles-h.png" alt="pink-triangles">
     <!-- text -->
     <span class="rights">©2016 turner. all rights reserved.</span>
 
