--- a/home.html
+++ b/home.html
@@ -13,6 +13,7 @@
   </head>
 
   <body>
+    <div id="loading"></div>
     <!-- navbar -->
     <div class="navbar-container">
       <span>OUR STUDIO</span>
